<resources>
    <!--    <string name="title_activity_nav_bar">NavBar</string>-->
    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--    <string name="nav_header_title">Android Studio</string>-->
    <!--    <string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--    <string name="nav_header_desc">Navigation header</string>-->
    <!--    <string name="action_settings">Settings</string>-->

    <!--    <string name="menu_home">Home</string>-->
    <!--    <string name="menu_gallery">Gallery</string>-->
    <!--    <string name="menu_slideshow">Slideshow</string>-->

    <string name="app_name">iThinkAlr</string>
    <string name="explore">Explore</string>
    <string name="explore_caps">EXPLORE</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="questionnaire_caps">QUESTIONNAIRE</string>
    <string name="agenda">Agenda</string>
    <string name="agenda_caps">AGENDA</string>
    <string name="itinerary">Itinerary</string>
    <string name="itinerary_caps">ITINERARY</string>
    <string name="about_us_caps">ABOUT US</string>
    <string name="about_us">About Us</string>
    <string name="attraction_detail">Attraction Details</string>
    <string name="attraction_detail_caps">ATTRACTIONS DETAILS</string>

    <string name="food_detail">Food Details</string>
    <string name="food_detail_caps">FOOD DETAILS</string>

    <string name="sign_up">Sign Up with Google</string>
    <string name="log_in">Sign in with Google</string>
    <string name="log_out">Log Out</string>


    <!--HOMEPAGE-->
    <string name="get_started">GET STARTED</string>

    <string name="signup_label">SIGN UP</string>
    <string name="login_label">LOGIN</string>
    <string name="login_signup">LOGIN / SIGNUP</string>
    <string name="login_message">Already have an Account?</string>
    <string name="signup_message">New to the Application?</string>


    <!--NAVBAR-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <!--QUESTIONNAIRE-->
    <string name="next_label">Next</string>
    <string name="back_label">Back</string>
    <string name="qn_set">YOU ARE SET !</string>
    <string name="qn_desc">Thank you for your inputs.
Please kindly wait for few minutes while we generate your homepage.</string>


    <!--    ITINERARY-->
    <string name="it_desc">Based on your input, you are available from:</string>
    <string name="itinerary_new_taxi">Private Hire</string>
    <string name="itinerary_new_transit">Public Transport</string>
    <string name="itinerary_no_agendas">No agendas added. Generating from a list of curated attractions.</string>
    <string name="itinerary_firebase_path">itinerary</string>


    <!--ABOUT US-->
    <string name="about_us_aim">iThinkAlr Itinerary Planner aims to assist people
        living in Singapore who are looking to find new ways to plan outing with their family, friends and
        significant others. </string>

    <string name="about_us_message">iThinkAlr is suitable for all ages capable of using a mobile phone.</string>

    <string name="about_us_team">Developers</string>
    <string name="about_us_team_names">Zhen Yi | Nailah | Luo Hao | Kheng Quan | Dilah | Si Ying | Chin See | Austin</string>


    <!--Firebase-->
    <!--    <string name="web_client_id" translatable="false">544392533045-jvqclpk65ueu5t32e439je40ni8vaf36.apps.googleusercontent.com</string>-->

    <!--    FOR YOU -->
    <string name="foryou">FOR YOU</string>

    <!--    MOST POPULAR-->
    <string name="mostpopular">MOST POPULAR</string>

    <!--    NEARBY YOU-->
    <string name="nearby">NEARBY YOU</string>

    <!--    COPYRIGHT RESERVED-->
    <string name="copyright">© 2022 by iThinkAlr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cover">Cover</string>

    <!-- String Name For Tab Layout -->
    <string name="for_you">For You</string>
    <string name="most_popular">Most Popular</string>
    <string name="nearby_you">Nearby You</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="API_KEY_DIRECTIONS">AIzaSyB2QDQBj2UwwG4ri9uL_folGmhecKFO2JE</string>
</resources>