<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutUsFragment"
    android:background="@color/bg_color">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintAboutUsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_aboutus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="35dp"
            android:text="@string/about_us_caps"
            android:fontFamily="@font/basic"
            android:textAlignment="center"
            android:textColor="@color/strawberry_jam"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="310dp"
            android:layout_height="160dp"
            android:layout_marginTop="30dp"
            android:scaleType="fitXY"
            android:src="@mipmap/image4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_aboutus" />



        <TextView
            android:id="@+id/tv_aim"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/basic"
            android:text="@string/about_us_aim"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_logo" />

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/basic"
            android:text="@string/about_us_message"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_aim" />

        <TextView
            android:id="@+id/tv_team"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/basic"
            android:text="@string/about_us_team"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message" />


        <TextView
            android:id="@+id/tv_teamname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/basic"
            android:text="@string/about_us_team_names"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_team" />

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/basic"
            android:text="@string/copyright"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_teamname" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>