<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_itinerary_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="35dp"
                android:fontFamily="@font/basic"
                android:text="@string/itinerary"
                android:textAlignment="center"
                android:textColor="@color/strawberry_jam"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_aim2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/basic"
                android:paddingLeft="100sp"
                android:paddingRight="100sp"
                android:text="@string/it_desc"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/tv_aim3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_itinerary" />

            <TextView
                android:id="@+id/tv_aim3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/basic"
                android:paddingLeft="100sp"
                android:paddingRight="100sp"
                android:text="time to time"
                android:textAlignment="center"
                android:textColor="@color/coral_red"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/generate_it"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_aim2"
                app:layout_constraintVertical_bias="1.0" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/generate_itinerary_taxi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@drawable/btn_color_190dp"
                    android:text="@string/itinerary_new_taxi"
                    android:textSize="15dp"/>
                <Button
                    android:id="@+id/generate_itinerary_transit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:background="@drawable/btn_color_190dp"
                    android:text="@string/itinerary_new_transit"
                    android:textSize="15dp"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/itinerary_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop = "5dp">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>